--- a/livros/src/main/resources/templates/emprestados.html
+++ b/livros/src/main/resources/templates/emprestados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.com.br">
+<html xmlns:th="https://www.thymeleaf.org/">
 <head>
 <meta charset="ISO-8859-1">
 <title> Livros emprestados </title>
@@ -9,4 +9,4 @@
 
 
 </body>
-</html>
+</html> 
