--- a/livros/src/main/resources/templates/lidos.html
+++ b/livros/src/main/resources/templates/lidos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.com.br">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title> Livros lidos / leitura atual </title>
+<title> Livros lidos  leitura atual </title>
 </head>
 <body>
 	<h1>  Página em construção </h1>
