--- a/livros/src/main/resources/templates/index.html
+++ b/livros/src/main/resources/templates/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.com.br">
+<html xmlns:th="https://www.thymeleaf.org/">
 <head>
 <meta charset="ISO-8859-1">
 <title> Página inicial </title>
 </head>
 <body>
 	<h1> Bem vindos!!!</h1>
+	
+	<ul>
+		<li><a th:href="@{/lidos}"> Livros lidos  </a> </li>
+		<li> <a th:href="@{/proximas}"> Próximas leituras </a> </li>
+		<li> <a th:href="@{/lista-desejos}"> Lista de desejos  </a> </li>
+		<li> <a th:href="@{/emprestados}"> Livros emprestados </a> </li>
+		
+	
+	</ul>
 
 
 </body>
