--- a/livros/src/main/resources/templates/proximas.html
+++ b/livros/src/main/resources/templates/proximas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.com.br">
+<html xmlns:th="https://www.thymeleaf.org/">
 <head>
 <meta charset="ISO-8859-1">
-<title> Próximas leituras </title>
+<title> Próximas  leituras </title>
 </head>
 <body>
 	<h1>  Página em construção </h1>
