--- a/livros/src/main/resources/templates/lidos.html
+++ b/livros/src/main/resources/templates/lidos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title> Livros lidos  leitura atual </title>
 </head>
 <body>
-	<h1>  Página em construção </h1>
+	<h1>  PÃ¡gina em construÃ§Ã£o </h1>
 
 
 </body>
