--- a/livros/src/main/resources/templates/proximas.html
+++ b/livros/src/main/resources/templates/proximas.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org/">
 <head>
-<meta charset="ISO-8859-1">
-<title> Próximas  leituras </title>
+<meta charset="UTF-8">
+<title> PrÃ³ximas  leituras </title>
 </head>
 <body>
-	<h1>  Página em construção </h1>
+	<h1>  PÃ¡gina em construÃ§Ã£o </h1>
 
 
 </body>
